<?xml version="1.0"?>
<package>
  <name>youbot_network_estopper</name>
  <version>0.1.0</version>
  <description>Provides a node which sends stop messages to the youbot if it doesn't receive a heartbeat signal.</description>

  <maintainer email="andywolff@wpi.edu">Andy Wolff</maintainer>
  <license>LGPL 2.1 or BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>cppunit</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>brics_actuator</run_depend>
</package>
